@@ -1,3 +1,10 @@
+2013-06-29 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/SDCCBBlock.c,
+	  src/SDCCopt.c,
+	  src/SDCClospre.hpp:
+	  Preparations for better handling of register-pressure in lospre.
+
 2013-06-27 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/SDCClospre.cc:
